--- a/advanceselectors/advance.html
+++ b/advanceselectors/advance.html
@@ -29,6 +29,9 @@
             ul>li::after{
                 content: "⛧𐕣"
             }
+            p::first-letter{
+                font-size: 30px;
+            }
         </style>
     </head>
     <body>
