--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <a href = "gallery.html">Gallery</a>
         </div>
         <div id = "aboutme">
-          <img src = "images.jpg"></img>
-          <p class = "desc">Kenyatta Fraziers</p>
+          <img src = "images (2).jpg"></img>
+          <p class = "desc">Jordan Carter</p>
           <p class = "desc1" id = "name1"> I am a producer, United Stated of America, Atlanta</p>
 
             
